--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+#DB Prop
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank
+spring.datasource.username=bank_user
+spring.datasource.password=bank_password
+# Hibernate Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.datasource.hikari.schema=public
