Add validation, add locale messages

--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
 spring.datasource.hikari.schema=public
+#Locale
+spring.web.locale-resolver=accept_header
