--- a/project/pom.xml
+++ b/project/pom.xml
@@ -16,6 +16,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<modelmapper.version>2.3.5</modelmapper.version>
+		<io.jsonwebtoken.version>0.9.1</io.jsonwebtoken.version>
+		<javax.xml.bind.version>2.3.0</javax.xml.bind.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,6 +58,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<!--		<dependency>-->
+		<!--			<groupId>org.springframework.boot</groupId>-->
+		<!--			<artifactId>spring-boot-starter-security</artifactId>-->
+		<!--		</dependency>-->
+		<!--		<dependency>-->
+		<!--			<groupId>io.jsonwebtoken</groupId>-->
+		<!--			<artifactId>jjwt</artifactId>-->
+		<!--			<version>${io.jsonwebtoken.version}</version>-->
+		<!--		</dependency>-->
+		<!--		<dependency>-->
+		<!--			<groupId>javax.xml.bind</groupId>-->
+		<!--			<artifactId>jaxb-api</artifactId>-->
+		<!--			<version>${javax.xml.bind.version}</version>-->
+		<!--		</dependency>-->
 
 	</dependencies>
 
