Add initial logic for email sender

--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql=true
 spring.datasource.hikari.schema=public
 #Locale
 spring.web.locale-resolver=accept_header
+#Mail Api
+api.key=04b99675b28d5214b162854beed37c40
+api.secret=903adceda82aea120f4afefb664b8e4c
