--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.web.locale-resolver=accept_header
 #Mail Api
 api.key=04b99675b28d5214b162854beed37c40
 api.secret=903adceda82aea120f4afefb664b8e4c
+#Security
+application.security.jwt.secret-key=iMAIImMQI1+qbsk0BkTE8Suia6EsypzCOKuNUxhaf5Y=
+application.security.jwt.expiration=3600000
